--- a/src/app/aaacesa/general-summary/general-summary.component.html
+++ b/src/app/aaacesa/general-summary/general-summary.component.html
@@ -5,7 +5,7 @@
       <div class="col-xs-12 col-lg-4 text-center" style="padding:0;">
         
         <span class="info-box-text"><h5>{{summary.tipo}}</h5></span>
-        <span class="info-box-number">{{summary.cantidad}}</span>
+        <span class="info-box-number">50</span>
         
       </div>
       <div class="col-xs-12 col-lg-4" style="padding:0">
