--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -1,3 +1,87 @@
 .img {
     max-width: 600px;
 }
+
+.bg-gray{
+    background-color: gray;
+  }
+  
+  .bg-salidas{
+    background-color: #1EC8F3;
+  }
+  
+  .bg-transfer{
+    background-color: #1E82BA;
+  }
+  
+  .bg-abandono{
+    background-color: #D9E11E;
+  }
+  
+  
+  .bg-red {
+    background-color: #CF0A2B !important;
+  }
+  
+  .bg-orange {
+    background-color: #FB600A !important;
+  }
+  
+  .bg-yello {
+    background-color: #E2DA0C !important;
+  }
+  
+  .bg-green {
+    background-color: #0AA010 !important;
+  }
+  .info-box {
+    background-color: white;
+  }
+  
+  .border {
+    border-radius: 100px 100px 100px 100px;
+    -moz-border-radius: 100px 100px 100px 100px;
+    -webkit-border-radius: 100px 100px 100px 100px;
+    border: 4px solid #cf43cf;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  .mynav ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .mynav li:not(:last-child) {
+    margin-right: 20px;
+  }
+  
+  .mynav a {
+    display: block;
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    padding: 7px 15px;
+  }
+  
+  .target {
+    position: absolute;
+    border-bottom: 4px solid transparent;
+    z-index: -1;
+    transform: translateX(-60px);
+  }
+  
+  .mynav a,
+  .target {
+    transition: all .35s ease-in-out;
+  }
+  
