--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -137,8 +137,7 @@
                 
     </mat-step>
 
-    <mat-step [completed]="model.Documentos?.length >= 1" >      
-    <!-- <mat-step>       -->
+    <mat-step [completed]="model.Documentos?.length >= 1 && this.model.Documentos.length <= 5" >
       <!-- <ng-template matStepLabel>Subir documentos</ng-template> -->
 
       <div class="container mt-3">
@@ -149,7 +148,7 @@
             <div ngfDrop selectable="1" multiple="1"
               [(files)]="files"
               accept = ".pdf"       
-              maxSize   = "4194304"                                                    
+              maxSize   = "2097152"                                                    
               (filesChange) = "dropInputChange($event)"
               class="my-drop-zone"
             >
