--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -50,7 +50,7 @@
                   <mat-form-field class="input-full-width">    
                     <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>                      
                   </mat-form-field> 
-                  <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary btn-sm">Checar referencia</button>                            
+                  <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary btn-sm"><i class="fas fa-search"></i> Buscar referencia</button>                            
                 </div>
               </div>          
             </div>
@@ -142,8 +142,8 @@
 
           <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
-              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
             </div>
           </div>
       </div>
@@ -183,8 +183,8 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
-            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
           </div>
         </div>
 
@@ -196,102 +196,58 @@
 
       <div class="container">              
         <div class="row">
-
-          <!--  Start left -->
-          <div class="col-12">                                
-              <div class="row mb-1">
-
-                  <!-- Start Left Inside -->
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">                                                                            
-                    <!-- <div class="col-12 mb-4">
-                      <h6 class="modal-title">Detalle PreAlerta {{ detailData.IdPrealerta }}</h6>
-                    </div> -->
-
-                    <div class="col-12">
-                      <div class="detail-text text-muted">Guia Master </div>
-                      <p class="detail-text">{{model.Master}}</p>
-                    </div>
-
-                    <div class="col-12">
-                      <div class="detail-text text-muted">Guia House </div>
-                      <p class="detail-text">{{model.House}}</p>
-                    </div>
-
-                    <div class="col-12">
-                      <div class="detail-text text-muted">Patente</div> 
-                      <p class="detail-text">{{model.Patente}}</p>
-                    </div>                                                                             
-                  </div>  
-                  <!-- End Left Inside -->
-
-                  <!-- Start Right Inside -->
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
-
-                    <div class="row">
-                      <div class="col-xs-12 col-sm-12 col-lg-8">
-                        <div class="">
-                          <div class="detail-text">Referencia: {{referencia}}</div>                    
-                        </div>
-                      </div>
-                      <!-- <div class="col-xs-12 col-sm-12 col-lg-4">
-                        <h5 class="detail-text text-muted">Estatus</h5>
-                        <div class="col status-filter">            
-                          <div class="status-filter__circle status-filter__circle--Solicitada"></div>
-                          <div class="status-filter__text">
-                            <p> Solicitada </p>
-                          </div>
-                        </div>
-                      </div> -->
-                    </div>
-
-                    <div class="row">
-                      <div class="col-xs-12 col-sm-12 col-lg-8">
-                        <div class="detail-text text-muted">RFC Facturar </div>
-                        <p class="detail-text">{{model.RFCFacturar}}</p>
-                      </div>
-
-                      <div class="col-xs-12 col-sm-12 col-lg-4">
-                        <div class="detail-text text-muted">Pedimento</div>
-                        <p class="detail-text">{{model.Pedimento}}</p>
-                      </div>                                                        
-                    </div>
-
-                    <div class="row">                              
-                      <div class="col-xs-12 col-sm-12 col-lg-8">
-                        <div class="detail-text text-muted">Subdivision</div>
-                        <p class="detail-text">{{model.Subdivision ? 'Sí' : 'No' }}</p>
-                      </div>
-                      <div class="col-xs-12 col-sm-12 col-lg-4">
-                        <div class="detail-text text-muted">Fecha Salida</div>
-                        <p class="detail-text">{{model.FechaSalida?.slice(6,8)}}/{{model.FechaSalida?.slice(4,6)}}/{{model.FechaSalida?.slice(0,4)}} {{model.FechaSalida?.slice(9,14)}}</p>
-                      </div>
-                    </div>                            
-                  </div>
-                  <!-- End Right Inside -->
-                  
-                </div>                                                                                                                                                                  
-
-                <hr class="dividerb">
-
-                <div class="row mt-4">                
-                  <div *ngFor="let file of model.Documentos" class="col col-lg-2">
-                    <!-- <h1 style="font-size: 3rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1> -->
-                    <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />
-                    <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
-                  </div>                        
-                </div>              
-          </div>
-          <!--  End left -->         
-
+          <h3>Resumen</h3>
         </div> <!-- End Row -->
+        <div class="row mt-2">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <div class="detail-text font-weight-bold ">Guía Master </div>
+            <p class="detail-text">{{model.Master}}</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <div class="detail-text font-weight-bold">Guía House </div>
+            <p class="detail-text">{{model.House}}</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <div class="detail-text font-weight-bold">Referencia</div>
+            <p class="detail-text">{{referencia  }}</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+            <div class="detail-text font-weight-bold">Fecha Salida</div>
+            <p class="detail-text">{{model.FechaSalida?.slice(6,8)}}/{{model.FechaSalida?.slice(4,6)}}/{{model.FechaSalida?.slice(0,4)}} {{model.FechaSalida?.slice(9,14)}}</p>
+          </div>
+        </div><!-- End Row Inside -->
+        <div class="row mt-2">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+              <div class="detail-text font-weight-bold">RFC Facturar </div>
+              <p class="detail-text">{{model.RFCFacturar}}</p>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+              <div class="detail-text font-weight-bold">Pedimento</div>
+              <p class="detail-text">{{model.Pedimento}}</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+              <div class="detail-text font-weight-bold">Patente</div>
+              <p class="detail-text">{{model.Patente}}</p>
+            </div>
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+              <div class="detail-text font-weight-bold">Subdivision</div>
+              <p class="detail-text">{{model.Subdivision ? 'Sí' : 'No'}}</p>
+            </div>
+          </div><!-- End Row Inside --> 
+          <hr class="dividerb">
+          <div class="row mt-3">
+            <div *ngFor="let file of model.Documentos" class="col-xs-2 col-sm-3 col-md-2 col-lg-2">
+              <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />                   <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                           
+            </div>                        
+          </div><!-- End Row Inside --> 
 
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
-            <button (click)="crearSalida()" class="btn btn-pill btn-primary btn-sm">Enviar</button>
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button (click)="crearSalida()" class="btn btn-pill btn-primary btn-sm  btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Enviar</button>
           </div>
-        </div>
-      </div>
+        </div><!-- End Row -->
+      </div><!-- End Container -->
                              
     </mat-step>    
   </mat-horizontal-stepper>
