--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -418,8 +418,7 @@ td.mat-cell{
 /* Floating Btn Calculator */
 .floating {
     &__btn {
-        position: fixed;
-        // right: 1.1rem;
+        position: fixed;        
         right: 0;
         top: 47%;
         color: white;
@@ -427,7 +426,7 @@ td.mat-cell{
         background-color: #183964;
         border-radius: 20px 0px 0px 20px;
         font-size: 2rem;
-        cursor: pointer;
+        cursor: pointer;        
         
         @include media-breakpoint-down(md) {
             display: none;
@@ -440,19 +439,51 @@ td.mat-cell{
         top: 47%;                                        
         width: 85vw;
         height: 80vh;
-        overflow-y: auto;
+        // overflow-y: auto;
         border-radius: 5px;
         box-shadow: 0px 0px 10px 1px #9EA6B1;
         background-color: white;
         transform: translate(100%, -40%);
-        transition: all .5s; 
+        z-index: 1000;
+        transition: all .5s;         
         
         @include media-breakpoint-down(md) {
             display: none;
+        }        
+
+        &-close-btn {
+            position: fixed;            
+            left: -3.7rem;
+            top: 0;
+            color: white;
+            padding: .5rem 1rem;
+            background-color: #183964;
+            border-radius: 20px 0px 0px 20px;
+            font-size: 2rem;
+            cursor: pointer;
+            
+            @include media-breakpoint-down(md) {
+                display: none;
+            } 
         }
     }    
 
     &__panel--active {
         transform: translate(0%, -40%);
-    }
+    }  
+
+    &__backdrop {        
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        background-color: rgba(0, 0, 0, .32);
+        background-color: rgba(0, 0, 0, .5);        
+        left: 0;
+        top: 0;   
+        z-index: 999;    
+        
+        @include media-breakpoint-down(md) {
+            display: none;
+        } 
+    }  
 }
