--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -8,16 +8,13 @@
       <br>
   <div class="row"> 
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-      <!-- <div *ngFor="let elemento of summarys">
-        <app-general-summary [summary]="elemento"></app-general-summary>
-      </div> -->
       <div class="info-box">
         <span class="info-box-icon {{summarys[0].color}}"></span>
         <div class="info-box-content">
           <div class="row">
             <div class="col-xs-12 col-lg-4 text-center" style="padding:0;">
               <span class="info-box-text"><h5>{{summarys[0].tipo}}</h5></span>
-              <span  class="info-box-number">{{detailPrevios}}</span>
+              <span class="info-box-number">{{detailPrevios.length > 0 ? detailPrevios : '0'}}</span>
 
             </div>
             <div class="col-xs-12 col-lg-4" style="padding:0">
@@ -66,7 +63,7 @@
                 <div class="row">
                   <div class="col-xs-12 col-lg-4 text-center" style="padding:0;">
                     <span class="info-box-text"><h5>{{summarys[3].tipo}}</h5></span>
-                    <span class="info-box-number">{{detailAbandono}}</span>
+                    <span class="info-box-number">{{detailAbandono.length > 0 ? detailAbandono : '0'}}</span>
                   </div>
                   <div class="col-xs-12 col-lg-4" style="padding:0">
                     <br>
