--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -53,7 +53,7 @@
 
           <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
+              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms">Siguiente</button>            
             </div>
           </div>
       </form>
@@ -129,8 +129,8 @@
 
           <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
-              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
             </div>
           </div>
       </div>
@@ -170,8 +170,8 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
-            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
           </div>
         </div>
 
@@ -183,77 +183,46 @@
 
       <div class="container">              
         <div class="row">
-
-          <!--  Start left -->
-          <div class="col-12">                                
-                <div class="row mb-1">
-
-                  <!-- Start Left Inside -->
-                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">                                                                                                
-
-                    <div class="col-12">
-                        <div class="detail-text text-muted">Guía Master </div>
-                        <p class="detail-text">{{model.Master}}</p>
-                    </div>
-
-                    <div class="col-12">
-                        <div class="detail-text text-muted">Guía House </div>
-                        <p class="detail-text">{{model.House}}</p>
-                    </div>                    
-                                                                        
-                  </div>  
-                  <!-- End Left Inside -->
-
-                    <!-- Start Right Inside -->
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">                   
-
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-lg-4">
-                                <div class="detail-text text-muted">Pedimento</div>
-                                <p class="detail-text">{{model.Pedimento}}</p>
-                            </div> 
-
-                            <div class="col-xs-12 col-sm-12 col-lg-4">
-                                <div class="detail-text text-muted">Piezas </div>
-                                <p class="detail-text">{{model.Piezas}}</p>
-                            </div>
-
-                            <div class="col-xs-12 col-sm-12 col-lg-4">
-                                <div class="detail-text text-muted">Peso</div>
-                                <p class="detail-text">{{model.Peso}} Kg</p>
-                            </div>                                                     
-                        </div> 
-                        
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-lg-8">
-                                <div class="detail-text text-muted">Fecha Entrada Mercancía</div>
-                                <p class="detail-text">{{model.FechaEntradaMercancia?.slice(6,8)}}/{{model.FechaEntradaMercancia?.slice(4,6)}}/{{model.FechaEntradaMercancia?.slice(0,4)}} {{model.FechaEntradaMercancia?.slice(9,14)}}</p>
-                            </div>
-                        </div>
-                    
-                    </div>
-                    <!-- End Right Inside -->
-                  
-                </div>                                                                                                                                                                 
-
-                <hr class="dividerb">
-
-                <div class="row mt-4 mb-3">                
-                  <div *ngFor="let file of model.Documentos" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                    <!-- <h1 style="font-size: 3rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1> -->
-                    <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />
-                    <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
-                  </div>                        
-                </div>              
-          </div>
-          <!--  End left -->         
-
+          <h3>Resumen</h3>
         </div> <!-- End Row -->
-
+        <div class="row mt-2">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+            <div class="detail-text font-weight-bold ">Guía Master </div>
+            <p class="detail-text">{{model.Master}}</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+            <div class="detail-text font-weight-bold">Guía House </div>
+            <p class="detail-text">{{model.House}}</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+            <div class="detail-text font-weight-bold">Pedimento</div>
+            <p class="detail-text">{{model.Pedimento  }}</p>
+          </div>
+        </div><!-- End Row Inside -->
+        <div class="row mt-2">
+          <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+            <div class="detail-text font-weight-bold">Piezas  </div>
+            <p class="detail-text">{{model.Piezas }}</p>
+          </div>
+          <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+            <div class="detail-text font-weight-bold">Peso</div>
+            <p class="detail-text">{{model.Peso}} Kg.</p>
+          </div>
+          <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+            <div class="detail-text font-weight-bold">Fecha Entrada Mercancía</div>
+            <p class="detail-text">{{model.FechaEntradaMercancia?.slice(6,8)}}/{{model.FechaEntradaMercancia?.slice(4,6)}}/{{model.FechaEntradaMercancia?.slice(0,4)}} {{model.FechaEntradaMercancia?.slice(9,14)}}</p>
+          </div>
+        </div><!-- End Row Inside -->
+        <hr class="dividerb">
+        <div class="row mt-3">
+          <div *ngFor="let file of model.Documentos" class="col-xs-2 col-sm-3 col-md-2 col-lg-2">
+            <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />                   <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                           
+          </div>                        
+        </div><!-- End Row Inside -->  
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
-            <button (click)="crearExportacion()" class="btn btn-pill btn-primary btn-sm">Enviar</button>
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4 btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
+            <button (click)="crearExportacion()" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Enviar</button>
           </div>
         </div>
       </div>
